// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker renders correctly 1`] = `
<div>
  <div
    class="css-2ohkpz-boxStyles-FieldContainer"
  >
    <label
      class="css-12ek51e-boxStyles"
      for="combobox-input-:r0:"
      id="downshift-:r1:-label"
    >
      <span
        class="css-1sf8c0k-boxStyles"
      >
        Select a time
      </span>
      <span
        class="css-1ru6lht-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-16uykm5-boxStyles"
      id="field-combobox-input-:r0:-hint"
    >
      Start typing to see results
    </span>
    <div
      class="css-8tabia-ComboboxBase"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:r1:-menu"
        aria-describedby="field-combobox-input-:r0:-hint"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:r1:-label"
        aria-required="false"
        autocomplete="off"
        class="css-g1val9-ComboboxBase"
        id="combobox-input-:r0:"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="css-1xsup3m-boxStyles-ComboboxButtonContainer"
      >
        <button
          aria-controls="downshift-:r1:-menu"
          aria-expanded="false"
          aria-label="Toggle menu"
          class="css-nyx9qe-BaseButton-ComboboxIconButton"
          id="downshift-:r1:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="css-1z0c8dw"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </button>
      </div>
      <ul
        aria-labelledby="downshift-:r1:-label"
        class="css-udl9lu-boxStyles-Popover"
        id="downshift-:r1:-menu"
        role="listbox"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
      />
    </div>
    <div
      aria-hidden="true"
      class="css-1r6wwux-Field"
    />
  </div>
</div>
`;

exports[`TimePicker renders correctly when loading 1`] = `
<div>
  <div
    class="css-2ohkpz-boxStyles-FieldContainer"
  >
    <label
      class="css-12ek51e-boxStyles"
      for="combobox-input-:r3:"
      id="downshift-:r4:-label"
    >
      <span
        class="css-1sf8c0k-boxStyles"
      >
        Select a time
      </span>
      <span
        class="css-1ru6lht-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-16uykm5-boxStyles"
      id="field-combobox-input-:r3:-hint"
    >
      Start typing to see results
    </span>
    <div
      class="css-8tabia-ComboboxBase"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:r4:-menu"
        aria-describedby="field-combobox-input-:r3:-hint"
        aria-expanded="true"
        aria-invalid="false"
        aria-labelledby="downshift-:r4:-label"
        aria-required="false"
        autocomplete="off"
        class="css-g1val9-ComboboxBase"
        id="combobox-input-:r3:"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="css-1xsup3m-boxStyles-ComboboxButtonContainer"
      >
        <button
          aria-controls="downshift-:r4:-menu"
          aria-expanded="true"
          aria-label="Toggle menu"
          class="css-nyx9qe-BaseButton-ComboboxIconButton"
          id="downshift-:r4:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="css-1z0c8dw"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="18 15 12 9 6 15"
            />
          </svg>
        </button>
      </div>
      <ul
        aria-labelledby="downshift-:r4:-label"
        class="css-1569u13-boxStyles-Popover"
        id="downshift-:r4:-menu"
        role="listbox"
        style="position: absolute; left: 0px; top: 0px; transform: translate(1px, 8px); max-height: 195px; width: 0px;"
      >
        <li
          class="css-g0k1ob-ComboboxListItem"
          tabindex="-1"
        >
          <div
            class="css-3ifbi3-boxStyles"
          >
            <span
              aria-atomic="false"
              aria-label="Loading options"
              class="css-uwg2j1-boxStyles"
              role="alert"
            >
              <span
                aria-hidden="true"
                class="css-1pzu52k-boxStyles-LoadingDots"
              />
              <span
                aria-hidden="true"
                class="css-1v3ghdi-boxStyles-LoadingDots"
              />
              <span
                aria-hidden="true"
                class="css-7kx10c-boxStyles-LoadingDots"
              />
            </span>
            <span
              class="css-1e881ou-boxStyles"
            >
              Loading
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      aria-hidden="true"
      class="css-1r6wwux-Field"
    />
  </div>
</div>
`;
